--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="container">
-    <h1>Brad Traversy The
+    <h1>Shubham Singh The
       <span class="txt-type" data-wait="3000" data-words='["Developer", "Designer", "Creator"]'></span>
     </h1>
     <h2>Welcome To My Website</h2>
